finish delete product route
